# mini-renderer

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.bat  build.bat
resources/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: main.cpp  main.hpp
